@@ -8,6 +8,7 @@ version 0.6.1:
     transparent decompression
   - VMware 3 and 4 read-only disk image support (untested)
   - Support for up to 4 serial ports
+  - TFTP server support (Magnus Damm)
 
 version 0.6.0:
 
